test/samples/invalid/interp/read_uninitialized_local.maruir
fun main()
locals a: u8, b: u8;
{
    entry:
        a := b + 1_u8;
        return;
}
